fixed skaffold syncing and added comments

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -18,3 +18,5 @@ build:
             manual:
                 - src: 'src/**/*.ts'
                   dest: .
+                - src: 'src/*.ts'
+                  dest: .
