moved current-user logic to middleware

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,7 +16,7 @@ build:
             dockerfile: Dockerfile
           sync:
             manual:
-                - src: 'src/**/*.ts'
-                  dest: .
-                - src: 'src/*.ts'
-                  dest: .
+              - src: 'src/*.ts'
+                dest: .
+              - src: 'src/***/*.ts'
+                dest: .
