started client side, added signup fp UI with form error handling and useRequest hook

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -18,5 +18,14 @@ build:
             manual:
               - src: 'src/*.ts'
                 dest: .
-              - src: 'src/***/*.ts'
+              - src: 'src/**/*.ts'
                 dest: .
+        - image: us.gcr.io/ticketing-dev-288723/client
+          context: client
+          docker:
+            dockerfile: Dockerfile
+          sync:
+            manual:
+              - src: '**/*.js'
+                dest: .
+      
