--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -38,4 +38,12 @@ build:
             manual:
               - src: '**/*.js'
                 dest: .
+        - image: us.gcr.io/ticketing-dev-288723/orders
+          context: orders
+          docker:
+            dockerfile: Dockerfile
+          sync:
+            manual:
+              - src: '**/*.js'
+                dest: .
       
