--- a/infra/k8s/orders-depl.yaml
+++ b/infra/k8s/orders-depl.yaml
@@ -21,7 +21,7 @@ spec:
                     - name: NATS_URL
                       value: 'https://nats-srv:4222'
                     - name: NATS_CLUSTER_ID
-                      value: orders
+                      value: ticketing
                     - name: NATS_CLIENT_ID
                       valueFrom:
                         fieldRef:
