--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -54,4 +54,12 @@ build:
             manual:
               - src: 'src/**/*.js'
                 dest: .
+        - image: us.gcr.io/ticketing-dev-288723/payments
+          context: payments
+          docker:
+            dockerfile: Dockerfile
+          sync:
+            manual:
+              - src: 'src/**/*.js'
+                dest: .
       
