--- a/payments/package.json
+++ b/payments/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.10.4",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^8.125.0",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
   },
