--- a/expiration/package.json
+++ b/expiration/package.json
@@ -22,7 +22,7 @@
     "@types/bull": "^3.14.4",
     "bull": "^3.19.1",
     "node-nats-streaming": "^0.3.2",
-    "ts-node-dev": "^1.0.0-pre.62",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
