--- a/orders/package.json
+++ b/orders/package.json
@@ -31,7 +31,7 @@
     "mongoose": "^5.10.4",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
-    "ts-node-dev": "^1.0.0-pre.62",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
