--- a/auth/package.json
+++ b/auth/package.json
@@ -30,7 +30,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.4",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.13",
