--- a/common/package.json
+++ b/common/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
-    "node-nats-streaming": "^0.3.2"
+    "node-nats-streaming": "^0.3.2",
+    "winston": "^3.13.0"
   }
 }
