--- a/expiration/package.json
+++ b/expiration/package.json
@@ -23,7 +23,8 @@
     "bull": "^3.19.1",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.14",
