--- a/tickets/package.json
+++ b/tickets/package.json
@@ -32,7 +32,8 @@
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.14",
