--- a/auth/package.json
+++ b/auth/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev src/index.ts",
-    "test": "jest --watchAll --no-cache"
+    "test": "jest --no-cache",
+    "test:watch": "jest --watchAll --no-cache"
   },
   "jest": {
     "preset": "ts-jest",
