--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -1,40 +1,40 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: auth-depl
+  name: auth-depl
 spec:
-    replicas: 1
-    selector:
-        matchLabels:
-            app: auth
-    template:
-        metadata:
-            labels:
-                app: auth
-        spec:
-            containers:
-                - name: auth
-                  image: us.gcr.io/ticketing-dev-418316/auth
-                  env:
-                    - name: AUTH_MONGO_URI
-                      value: 'mongodb://auth-mongo-srv:27017/auth'
-                    - name: JWT_KEY
-                      valueFrom:
-                        secretKeyRef:
-                            name: jwt-secret
-                            key: JWT_KEY
+  replicas: 1
+  selector:
+    matchLabels:
+      app: auth
+  template:
+    metadata:
+      labels:
+        app: auth
+    spec:
+      containers:
+        - name: auth
+          image: luketchang/auth
+          env:
+            - name: AUTH_MONGO_URI
+              value: "mongodb://auth-mongo-srv:27017/auth"
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-    name: auth-srv
+  name: auth-srv
 spec:
-    type: ClusterIP
-    selector:
-        app: auth
-    ports:
-        - name: auth
-          protocol: TCP
-          port: 3000
-          targetPort: 3000
+  type: ClusterIP
+  selector:
+    app: auth
+  ports:
+    - name: auth
+      protocol: TCP
+      port: 3000
+      targetPort: 3000
