--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -1,36 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: client-depl
+  name: client-depl
 spec:
-    replicas: 1
-    selector:
-        matchLabels:
-            app: client
-    template:
-        metadata:
-            labels:
-                app: client
-        spec:
-            containers:
-                - name: client
-                  image: us.gcr.io/ticketing-dev-418316/client
-                  env:
-                    - name: NODE_OPTIONS
-                      value: "--openssl-legacy-provider"
+  replicas: 1
+  selector:
+    matchLabels:
+      app: client
+  template:
+    metadata:
+      labels:
+        app: client
+    spec:
+      containers:
+        - name: client
+          image: luketchang/client
+          env:
+            - name: NODE_OPTIONS
+              value: "--openssl-legacy-provider"
 
-                  
 ---
 apiVersion: v1
 kind: Service
 metadata:
-    name: client-srv
+  name: client-srv
 spec:
-    type: ClusterIP
-    selector:
-        app: client
-    ports:
-        - name: client
-          protocol: TCP
-          port: 3000
-          targetPort: 3000
+  type: ClusterIP
+  selector:
+    app: client
+  ports:
+    - name: client
+      protocol: TCP
+      port: 3000
+      targetPort: 3000
