--- a/infra/k8s/orders-depl.yaml
+++ b/infra/k8s/orders-depl.yaml
@@ -1,48 +1,48 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: orders-depl
+  name: orders-depl
 spec:
-    replicas: 1
-    selector:
-        matchLabels:
-            app: orders
-    template:
-        metadata:
-            labels:
-                app: orders
-        spec:
-            containers:
-                - name: orders
-                  image: us.gcr.io/ticketing-dev-418316/orders
-                  env:
-                    - name: ORDERS_MONGO_URI
-                      value: 'mongodb://orders-mongo-srv:27017/orders'
-                    - name: NATS_URL
-                      value: 'https://nats-srv:4222'
-                    - name: NATS_CLUSTER_ID
-                      value: ticketing
-                    - name: NATS_CLIENT_ID
-                      valueFrom:
-                        fieldRef:
-                            fieldPath: metadata.name
-                    - name: JWT_KEY
-                      valueFrom:
-                        secretKeyRef:
-                            name: jwt-secret
-                            key: JWT_KEY
+  replicas: 1
+  selector:
+    matchLabels:
+      app: orders
+  template:
+    metadata:
+      labels:
+        app: orders
+    spec:
+      containers:
+        - name: orders
+          image: luketchang/orders
+          env:
+            - name: ORDERS_MONGO_URI
+              value: "mongodb://orders-mongo-srv:27017/orders"
+            - name: NATS_URL
+              value: "nats://nats-srv:4222"
+            - name: NATS_CLUSTER_ID
+              value: ticketing
+            - name: NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-    name: orders-srv
+  name: orders-srv
 spec:
-    type: ClusterIP
-    selector:
-        app: orders
-    ports:
-        - name: orders
-          protocol: TCP
-          port: 3000
-          targetPort: 3000
+  type: ClusterIP
+  selector:
+    app: orders
+  ports:
+    - name: orders
+      protocol: TCP
+      port: 3000
+      targetPort: 3000
