--- a/infra/k8s/payments-depl.yaml
+++ b/infra/k8s/payments-depl.yaml
@@ -1,53 +1,53 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: payments-depl
+  name: payments-depl
 spec:
-    replicas: 1
-    selector:
-        matchLabels:
-            app: payments
-    template:
-        metadata:
-            labels:
-                app: payments
-        spec:
-            containers:
-                - name: payments
-                  image: us.gcr.io/ticketing-dev-418316/payments
-                  env:
-                    - name: PAYMENTS_MONGO_URI
-                      value: 'mongodb://payments-mongo-srv:27017/payments'
-                    - name: NATS_URL
-                      value: 'https://nats-srv:4222'
-                    - name: NATS_CLUSTER_ID
-                      value: ticketing
-                    - name: NATS_CLIENT_ID
-                      valueFrom:
-                        fieldRef:
-                            fieldPath: metadata.name
-                    - name: JWT_KEY
-                      valueFrom:
-                        secretKeyRef:
-                            name: jwt-secret
-                            key: JWT_KEY
-                    - name: STRIPE_KEY
-                      valueFrom:
-                        secretKeyRef:
-                            name: stripe-secret
-                            key: STRIPE_KEY
+  replicas: 1
+  selector:
+    matchLabels:
+      app: payments
+  template:
+    metadata:
+      labels:
+        app: payments
+    spec:
+      containers:
+        - name: payments
+          image: luketchang/payments
+          env:
+            - name: PAYMENTS_MONGO_URI
+              value: "mongodb://payments-mongo-srv:27017/payments"
+            - name: NATS_URL
+              value: "nats://nats-srv:4222"
+            - name: NATS_CLUSTER_ID
+              value: ticketing
+            - name: NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
+            - name: STRIPE_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: stripe-secret
+                  key: STRIPE_KEY
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-    name: payments-srv
+  name: payments-srv
 spec:
-    type: ClusterIP
-    selector:
-        app: payments
-    ports:
-        - name: payments
-          protocol: TCP
-          port: 3000
-          targetPort: 3000
+  type: ClusterIP
+  selector:
+    app: payments
+  ports:
+    - name: payments
+      protocol: TCP
+      port: 3000
+      targetPort: 3000
