--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -1,48 +1,48 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: tickets-depl
+  name: tickets-depl
 spec:
-    replicas: 1
-    selector:
-        matchLabels:
-            app: tickets
-    template:
-        metadata:
-            labels:
-                app: tickets
-        spec:
-            containers:
-                - name: tickets
-                  image: us.gcr.io/ticketing-dev-418316/tickets
-                  env:
-                    - name: TICKETS_MONGO_URI
-                      value: 'mongodb://tickets-mongo-srv:27017/tickets'
-                    - name: NATS_URL
-                      value: 'https://nats-srv:4222'
-                    - name: NATS_CLUSTER_ID
-                      value: ticketing
-                    - name: NATS_CLIENT_ID
-                      valueFrom:
-                        fieldRef:
-                            fieldPath: metadata.name
-                    - name: JWT_KEY
-                      valueFrom:
-                        secretKeyRef:
-                            name: jwt-secret
-                            key: JWT_KEY
+  replicas: 1
+  selector:
+    matchLabels:
+      app: tickets
+  template:
+    metadata:
+      labels:
+        app: tickets
+    spec:
+      containers:
+        - name: tickets
+          image: luketchang/tickets
+          env:
+            - name: TICKETS_MONGO_URI
+              value: "mongodb://tickets-mongo-srv:27017/tickets"
+            - name: NATS_URL
+              value: "nats://nats-srv:4222"
+            - name: NATS_CLUSTER_ID
+              value: ticketing
+            - name: NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-    name: tickets-srv
+  name: tickets-srv
 spec:
-    type: ClusterIP
-    selector:
-        app: tickets
-    ports:
-        - name: tickets
-          protocol: TCP
-          port: 3000
-          targetPort: 3000
+  type: ClusterIP
+  selector:
+    app: tickets
+  ports:
+    - name: tickets
+      protocol: TCP
+      port: 3000
+      targetPort: 3000
