--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,8 @@
-FROM --platform=linux/amd64 node:alpine
+FROM node:alpine
 
 WORKDIR /app
 COPY package.json .
 RUN npm install
 COPY . .
 
-CMD ["npm", "run", "dev"] 
+CMD ["npm", "run", "dev"]
